messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-green
  labels:
    app: django-messaging
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging
      version: green
    template:
      metadata:
        labels:
          app: django-messaging
          version: green
      spec:
        containers:
          - name: django-messaging
            image: odegichristine/messaging-app:green
            ports:
              - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  type: ClusterIP
  selector:
    app: django-messaging
  ports:
    - port: 8000
      targetPort: 8000
