messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django
    version: blue
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
